@@ -43,13 +43,13 @@ castle_defense_rate: 100
 gvg_short_attack_damage_rate: 80
 
 // Ranged damage adjustments (non skills) for WoE battles (Guild Vs Guild) (Note 2)
-gvg_long_attack_damage_rate: 75
+gvg_long_attack_damage_rate: 80
 
 // Weapon skills damage adjustments for WoE battles (Guild Vs Guild) (Note 2)
 gvg_weapon_attack_damage_rate: 60
 
 // Magic skills damage adjustments for WoE battles (Guild Vs Guild) (Note 2)
-gvg_magic_attack_damage_rate: 50
+gvg_magic_attack_damage_rate: 60
 
 // Misc skills damage adjustments for WoE battles (Guild Vs Guild) (Note 2)
 gvg_misc_attack_damage_rate: 60
